[gd_scene load_steps=6 format=3 uid="uid://ds7a6wrec0vdw"]

[ext_resource type="Script" path="res://main.gd" id="1_6r4ub"]
[ext_resource type="Script" path="res://score.gd" id="2_arc4m"]

[sub_resource type="LabelSettings" id="LabelSettings_o1gci"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_blh7v"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_g3top"]
font_size = 100
font_color = Color(1, 0, 0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_6r4ub")

[node name="Box" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Box"]
polygon = PackedVector2Array(334, 73, 334, 630, 853, 628, 850, 73, 794, 73, 793, 579, 388, 579, 390, 72)

[node name="BoxBorder" type="ColorRect" parent="Box"]
offset_left = 329.0
offset_top = 72.0
offset_right = 388.0
offset_bottom = 610.0
color = Color(0.427451, 0.270588, 1, 1)

[node name="BoxBorder2" type="ColorRect" parent="Box"]
offset_left = 793.0
offset_top = 72.0
offset_right = 852.0
offset_bottom = 610.0
color = Color(0.427451, 0.270588, 1, 1)

[node name="BoxBorder3" type="ColorRect" parent="Box"]
offset_left = 331.0
offset_top = 579.0
offset_right = 851.0
offset_bottom = 629.0
color = Color(0.427451, 0.270588, 1, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="CanvasLayer"]
offset_left = 66.0
offset_top = 96.0
offset_right = 106.0
offset_bottom = 154.0
text = "0"
label_settings = SubResource("LabelSettings_o1gci")
script = ExtResource("2_arc4m")

[node name="Next" type="Label" parent="CanvasLayer"]
offset_left = 954.0
offset_top = 93.0
offset_right = 1028.0
offset_bottom = 141.0
text = "Next"
label_settings = SubResource("LabelSettings_blh7v")

[node name="GameOver" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.5
offset_top = -70.0
offset_right = 272.5
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_g3top")

[node name="LeftMarker" type="Marker2D" parent="."]
position = Vector2(424, 24)

[node name="RightMarker" type="Marker2D" parent="."]
position = Vector2(760, 24)

[node name="NextFruitMarker" type="Marker2D" parent="."]
position = Vector2(990, 186)

[node name="FullMarker" type="Marker2D" parent="."]
position = Vector2(455, 75)
